--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,14 @@
-<h2>Countries</h2>
+<div class="card-columns">
+    <div class="card" *ngFor="let item of newSongs">
+        <img [src]="item.images[0].url" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">{{ item.name }}</h5>
+            <p class="card-text">
+                <span class="badge badge-pill badge-primary" *ngFor="let artist of item.artists">
+                            {{ artist.name }}
+                    </span>
 
-<ul class="list-group">
-    <li class="list-group-item" *ngFor="let country of countries">
-        {{ country.name }}
-    </li>
-
-
-
-</ul>
+            </p>
+        </div>
+    </div>
+</div>
