--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,14 @@
-<p>search works!</p>
+<div>
+    <div>
+        <input type="text" (keyup)="search()" class="form-control">
+    </div>
+</div>
+<div class="card-columns">
+    <div class="card" *ngFor="let artist of artists">
+        <img [src]="artist.images | noimage" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">{{ artist.name }}</h5>
+
+        </div>
+    </div>
+</div>
