--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -1,5 +1,5 @@
 <div class="card-columns">
-    <div class="card" *ngFor="let item of items">
+    <div class="card puntero" *ngFor="let item of items" (click)="showArtist(item)">
         <img [src]="item.images | noimage" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">{{ item.name }}</h5>
