--- a/src/app/components/artista/artista.component.html
+++ b/src/app/components/artista/artista.component.html
@@ -1,4 +1,5 @@
-<div class="card-columns">
+<app-loading></app-loading>
+<div *ngIf="artist" class="card-columns">
     <div class="card puntero">
         <img [src]="artist.images | noimage" class="card-img-top" alt="...">
         <div class="card-body">
@@ -9,5 +10,28 @@
                 </span>
             </p>
         </div>
+    </div>
+</div>
+
+<div class="row m-5">
+    <div class="col">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Piture</th>
+                    <th>Album</th>
+                    <th>Song</th>
+                    <th>Preview</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let track of topTracks">
+                    <td><img [src]="track.album.images | noimage" width="80" height="80" alt=""></td>
+                    <td>{{track.album.name}}</td>
+                    <td>{{track.name}}</td>
+                    <td> <audio [src]="track.preview_url" controls></audio></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
