--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,11 @@
 <app-loading *ngIf="loading"></app-loading>
+
+<div *ngIf="errorMsg" class="alert alert-danger animated fadeIn">
+    <h3>Error</h3>
+    <p>
+        {{errorMsg}}
+    </p>
+
+</div>
+
 <app-cards [items]="newSongs"></app-cards>
